tests/deriving/should_fail/T7401_fail.hs
{-# LANGUAGE Haskell2010 #-}
module T7401_fail where

data D deriving Eq
